@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-10T08:32:28Z",
-  "count_outdated" : 223,
-  "uniques_outdated" : 77,
-  "count" : 241,
+  "timestamp" : "2022-11-10T16:28:42Z",
+  "count_outdated" : 225,
+  "uniques_outdated" : 78,
+  "count" : 242,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-10-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 4,
