@@ -1,12 +1,7 @@
 {
-  "count": 18,
+  "count": 17,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-10-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 4,
